--- a/Main_Miscellaneous/abstract_chs.tex
+++ b/Main_Miscellaneous/abstract_chs.tex
@@ -3,9 +3,9 @@
 \begin{chineseabstract}
     在数据中心和集群计算系统中，无损网络逐渐成为主流趋势。在RoCE（RDMA over Converged Ethernet）中，无损传输通过逐跳基于优先级的流量控制（Priority-based Flow Control，PFC）机制实现。为了避免缓存溢出，支持PFC的转发设备需要预留部分缓存空间用于存储PFC控制帧生效前到达的报文，即净空缓存。然而，随着高速网络持续发展和应用需求不断增加，现有净空缓存管理机制的低效性和性能问题日益突出，无损网络需要一种更高效的净空缓存管理机制。对于上述问题，本文分别针对无损网络中的片上缓存系统和异构缓存系统研究了动态共享的净空缓存管理机制。主要研究内容和成果包括：
 
-    针对片上缓存系统现有净空缓存管理机制SIH存在的净空缓存挤压共享缓存空间和净空缓存分配低效问题，本文提出了面向片上缓存系统的动态共享净空缓存管理机制DSH。DSH的动态性体现在DSH根据队列拥塞状态动态分配净空缓存；DSH的共享性体现在保底净空缓存在端口内不同队列之间的共享和共享净空缓存在所有队列之间的共享。相对于传统净空缓存机制SIH，DSH通过统计复用显著提高缓存利用效率，有效避免PFC触发。
+    针对片上缓存系统现有净空缓存管理机制存在的净空缓存挤压共享缓存空间和净空缓存分配低效问题，本文提出了面向片上缓存系统的动态共享净空缓存管理机制DSH（Dynamic and Shared Headroom Allocation）。DSH的动态性体现在DSH根据队列拥塞状态动态分配净空缓存；DSH的共享性体现在保底净空缓存在端口内不同队列之间的共享和共享净空缓存在所有队列之间的共享。相对于传统净空缓存机制，DSH通过统计复用显著提高缓存利用效率，有效避免PFC触发。
     
-    针对异构缓存系统现有净空缓存管理机制H-SIH存在的突发吸纳受限于片外带宽、全局流控损害吞吐和长距离传输丢包问题，本文提出了面向异构缓存系统的动态共享净空缓存管理机制H-DSH。在缓存分配时，H-DSH以片外缓存为中心，利用片外缓存扩展共享缓存空间，同时通过优先分配片外共享净空缓存缓解片上缓存容量压力。在缓存位置决策时，H-DSH进一步结合流量敏感性特征，充分发挥片上和片外缓存的带宽和容量优势。在片外带宽压力过大时，H-DSH主动提前触发部分拥塞流量的暂停帧，避免片外带宽瓶颈导致性能受损。
+    针对异构缓存系统现有净空缓存管理机制存在的突发吸纳受限于片外带宽、全局流控损害吞吐和长距离传输丢包问题，本文提出了面向异构缓存系统的动态共享净空缓存管理机制H-DSH（Dynamic and Shared Headroom Allocation for Hybrid Buffer）。在缓存分配时，H-DSH以片外缓存为中心，利用片外缓存扩展共享缓存空间，同时通过优先分配片外共享净空缓存缓解片上缓存容量压力。在缓存位置决策时，H-DSH进一步结合流量敏感性特征，充分发挥片上和片外缓存的带宽和容量优势。在片外带宽压力过大时，H-DSH提前触发部分拥塞流量的暂停帧，避免片外带宽瓶颈导致性能受损。
     
     实验结果表明，DSH可以有效减少PFC触发，避免网络性能受损，在大规模网络环境中最高可以将背景流和突发流的FCT减小31.1\%和57.7\%；H-DSH可以将片外缓存的突发吸纳量增大3倍，避免流量吞吐受损，最高可以将平均FCT减小14.8\%，同时对无损传输距离的扩展超过4倍。
     
