--- a/Main_Miscellaneous/acknowledegment.tex
+++ b/Main_Miscellaneous/acknowledegment.tex
@@ -4,7 +4,7 @@
 
 从本课题开题到现在论文即将完结，这个过程中有遇到困难时的沮丧，也有取得进展时的欣喜，能够克服所有难题，顺利完成毕业设计，首先要感谢我的指导老师单丹枫老师，单老师渊博的知识、严谨的态度和强大的人格魅力令我钦佩和敬仰。感谢单老师耐心地为我们讲解遇到的问题，给我们传授科研经验，时刻关注我们的科研进展，同时在生活中对我们的关爱和照顾。本论文的完成离不开单老师的帮助，老师教会了我们很多东西， 由衷地感谢单老师的付出。
 
-同时我要感谢小组内的吴晨、王宙、郑鼎方、胡世豪、蒋林冰等师兄师姐，他们给我传授了很多科研上的经验，为我解答了很多遇到的问题，还有实验室的梁泽宇、孙寅鑫、党一涵、周高升、孙斌等同学，在这个过程中和我一起讨论，帮我解决了很多问题，互相分享喜怒哀乐，彼此成长了很多。
+同时我要感谢小组内的吴晨、王宙、郑鼎方、胡世豪、蒋林冰等师兄师姐，他们给我传授了很多科研上的经验，为我解答了很多遇到的问题，实验室的梁泽宇、孙寅鑫、党一涵、周高升、孙斌等同学和彭光宇、杨舜磊、张琦、李云广等师弟师妹，还有我的舍友金吉磊、王冠一和党博文，在这个过程中和我一起讨论，帮我解决了很多问题，互相分享喜怒哀乐，彼此成长了很多。
 
 还要感谢我的家人，感谢你们给我的关心和支持，你们对我的关爱是我保持进取的不竭动力，你们的健康和快乐是我最大的心愿。
 
