--- a/Main_Spine/c2.tex
+++ b/Main_Spine/c2.tex
@@ -236,7 +236,7 @@ HBM在架构上采用了3D堆叠封装技术，如图\ref{fig:c2:hbm architectur
 
 \xsection{ns-3网络仿真平台}{ns-3 Network Simulator}
 
-本文基于ns-3网络仿真平台模拟真实网络环境。ns-3是一个由事件驱动的离散事件仿真器，ns-3提供了有关分组数据网络如何工作和执行的模型，并为用户提供了用于进行仿真实验的仿真引擎\cite{ns-3,matthias2010ns3,ru2017ns3}，其系统架构如图\ref{fig:c2:ns3 architecture}所示。
+本文基于ns-3网络仿真平台模拟真实网络环境。ns-3是一个由事件驱动的离散事件仿真器，ns-3提供了有关分组数据网络如何工作和执行的模型，并为用户提供了用于进行仿真实验的仿真引擎\cite{ns-3,matthias2010ns3}，其系统架构如图\ref{fig:c2:ns3 architecture}所示。
 
 \begin{figure}[H]
   \centering
