--- a/References/achievement.bib
+++ b/References/achievement.bib
@@ -4,8 +4,7 @@
   booktitle={IEEE INFOCOM 2023-IEEE Conference on Computer Communications},
   pages={1--10},
   year={2023},
-  organization={IEEE},
-  NOTE={(CCF A，导师一作，本人三作)}
+  organization={IEEE}
 }
 
 @inproceedings{shan2023less,
@@ -14,38 +13,34 @@
   booktitle={2023 IEEE 43rd International Conference on Distributed Computing Systems (ICDCS)},
   pages={591--602},
   year={2023},
-  organization={IEEE},
-  NOTE={(CCF B，导师一作，本人二作)}
+  organization={IEEE}
 }
 
 @patent{patent2022congestioncontrol,
   title = {多服务队列环境中基于时延的拥塞控制机制和控制装置},
   assignee = {西安交通大学},
-  inventors = {单丹枫 and 刘钰琪},
+  author = {单丹枫 and 刘钰琪},
   type = {发明},
   number = {申请号：2022104395160},
-  day = {申请日：2022-04-25},
-  note = "(已授权，导师一作，本人二作)"
+  day = {申请日：2022-04-25}
 }
 
 @patent{patent2023dynamicbuffermanagement,
   title = {一种面向PFC交换机的动态净空缓存管理方法及装置},
   assignee = {西安交通大学},
-  inventors = {单丹枫 and 刘钰琪},
+  author = {单丹枫 and 刘钰琪},
   type = {发明},
   number = {申请号：2023108782453},
-  day = {申请日：2023-07-17},
-  note = "(实质审查，导师一作，本人二作)"
+  day = {申请日：2023-07-17}
 }
 
 @patent{patent2023trafficshape,
   title = {一种高速低开销流量整形方法及装置},
   assignee = {西安交通大学},
-  inventors = {单丹枫 and 胡世豪 and 刘钰琪},
+  author = {单丹枫 and 胡世豪 and 刘钰琪},
   type = {发明},
   number = {申请号：2023101793724},
-  day = {申请日：2023-02-28},
-  note = "(实质审查，导师一作，本人二作)"
+  day = {申请日：2023-02-28}
 }
 
 
