--- a/XJTU-thesis.cls
+++ b/XJTU-thesis.cls
@@ -1819,7 +1819,7 @@
   \addcontentsline{toc}{chapter}{常规评阅人名单}
   \addcontentsline{toe}{chapter}{General Reviewers List}
   \hypersetup{bookmarksdepth=2}
-  本学位论文共接受 #1 位专家评阅，其中常规评阅人 #2 名，名单如下：
+  本学位论文共接受 #1 位专家评阅，其中常规评阅人 #2 名。
   \ifthesis@blind\else
     \renewcommand{\arraystretch}{1.5}
     \begin{table}[H]
@@ -1874,7 +1874,7 @@
 
   \declareline{6}{学位论文独创性声明（2）}
 
-  本人声明：研究生\hskip 2cm 所提交的本篇学位论文已经本人审阅，确系在本人指导下由该生独立完成的研究成果。
+  本人声明：研究生所提交的本篇学位论文已经本人审阅，确系在本人指导下由该生独立完成的研究成果。
 
   本人如违反上述声明，愿意承担以下责任和后果：
   \begin{enumerate}
